<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tw_header_bg" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:padding="@dimen/tamara_padding_general"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="24dip"
                android:paddingVertical="2dip"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/tamara_margin_general"
                app:srcCompat="@drawable/tw_ic_logo"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/twCloseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/tw_ic_circle_button"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/Heading1"
            android:layout_marginTop="@dimen/tamara_margin_general"
            android:text="@string/tw_info_title"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/tamara_margin_general_large"
            android:layout_marginBottom="@dimen/tamara_margin_general_medium"
            style="@style/LabelMedium3"
            android:text="@string/tw_info_sub_title"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tamara_margin_general"
            android:layout_marginHorizontal="@dimen/tamara_margin_general"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:src="@drawable/tw_ic_tamara_badge"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tw_info_content_1_title"
                    android:gravity="center_vertical"
                    style="@style/Heading5"
                    android:layout_marginStart="@dimen/tamara_padding_general" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tw_info_content_1_subtitle"
                    android:gravity="center_vertical"
                    style="@style/BodyRegular3"
                    android:layout_marginStart="@dimen/tamara_padding_general" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tamara_margin_general"
            android:layout_marginHorizontal="@dimen/tamara_margin_general"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:src="@drawable/tw_ic_id_badge"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tw_info_content_2_title"
                    android:gravity="center_vertical"
                    style="@style/Heading5"
                    android:layout_marginStart="@dimen/tamara_padding_general" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tw_info_content_2_subtitle"
                    android:gravity="center_vertical"
                    style="@style/BodyRegular3"
                    android:layout_marginStart="@dimen/tamara_padding_general" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tamara_margin_general"
            android:layout_marginBottom="@dimen/tamara_margin_general_large"
            android:layout_marginHorizontal="@dimen/tamara_margin_general"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:src="@drawable/tw_ic_pay_badge"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tw_info_content_3_title"
                    android:gravity="center_vertical"
                    style="@style/Heading5"
                    android:layout_marginStart="@dimen/tamara_padding_general" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tw_info_content_3_subtitle"
                    android:gravity="center_vertical"
                    style="@style/BodyRegular3"
                    android:layout_marginStart="@dimen/tamara_padding_general" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_margin="@dimen/tamara_margin_general"
            android:background="@color/tw_color_divider"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/twFooterLearnMoreTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoLink="web"
            style="@style/BodyRegular3"
            android:textColor="@color/tw_neutral_black"
            android:textColorLink="@color/tw_color_highlight"
            android:layout_marginTop="@dimen/tamara_margin_general_medium"
            android:text="@string/tw_info_footer_subtitle"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:autoLink="web"
        android:layout_gravity="bottom|center_horizontal"
        style="@style/BodyRegular3"
        android:textColor="@color/tw_neutral_black"
        android:textColorLink="@color/tw_color_highlight"
        android:layout_marginHorizontal="@dimen/tamara_margin_general"
        android:layout_marginBottom="40dip"
        android:text="@string/tw_info_footer_info"/>
</FrameLayout>
